--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <meta property="og:title" content="Indrasena Reddy - Portfolio" />
     <meta property="og:description" content="Portfolio of Indrasena Reddy - A learner from mistakes, sharing knowledge through code and content creation" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Favicons (URL-encoded folder name) -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io%20%283%29/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io%20%283%29/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io%20%283%29/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
 
   <body>
